# skeletonisation_project

./: CMakeLists.txt  README.md  skeletonise.h  skeletonise_alpha_wrap.cpp  skeletonise_branches.cpp  skeletonise_classifier.cpp  skeletonise_cycles.cpp  skeletonise_feature_extraction.cpp  skeletonise_mean_curvature.cpp  skeletonise_polylines_to_point_cloud.cpp
